# generic_game

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md  install.sh
src/: CMakeLists.txt  actor.hpp  game.cpp  game.hpp  main.cpp  util.cpp  util.hpp
test/: CMakeLists.txt  cmake_install.cmake  gens_test.cpp  test_util.cpp  util.hpp
util/: gens.hpp  util.hpp  util_test.cpp
