SET(UTIL_LIB_SOURCES
    ${UTIL_LIB_SOURCES}
    "${CMAKE_CURRENT_SOURCE_DIR}/util.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/game.cpp"
)

SET(UTIL_LIB_HEADERS
    ${UTIL_LIB_HEADERS}
    "${CMAKE_CURRENT_SOURCE_DIR}/util.hpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/gens.hpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/game.hpp"
)

ADD_LIBRARY(
    ${UTIL_LIB}
    STATIC
    ${UTIL_LIB_SOURCES}
    ${UTIL_LIB_HEADERS}
)

ADD_EXECUTABLE(game.exe
    "${CMAKE_CURRENT_SOURCE_DIR}/main.cpp"
)
TARGET_LINK_LIBRARIES(game.exe
    ${SYS_LIBS}
    ${UTIL_LIB}
)
