SET(UTIL_LIB_SOURCES
    ${UTIL_LIB_SOURCES}
    "${CMAKE_CURRENT_SOURCE_DIR}/util.cpp"
)

SET(UTIL_LIB_HEADERS
    ${UTIL_LIB_HEADERS}
    "${CMAKE_CURRENT_SOURCE_DIR}/util.hpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/gens.hpp"
)

ADD_LIBRARY(
    ${UTIL_LIB}
    STATIC
    ${UTIL_LIB_SOURCES}
    ${UTIL_LIB_HEADERS}
)

SET(UTIL_TEST_SOURCES
    ${UTIL_LIB_SOURCES}
    "${CMAKE_CURRENT_SOURCE_DIR}/util_test.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/gens_test.cpp"
)

ADD_EXECUTABLE(LibTest.exe ${UTIL_TEST_SOURCES})
TARGET_LINK_LIBRARIES(LibTest.exe ${SYS_LIBS} ${UTIL_LIB})
